--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 .App {
-  
+  display: flex;
+  flex-direction: column;
+  width: 120px;
+  padding: 5px;
+  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+  margin: 0 auto;
+  height: 110px;
+  justify-content: space-between;
+}
+
+.App label {
+    display: none;
 }
